# math_problem_solver

./: README.md  checking_ollama.py  main.py  pyproject.toml  solver.py  threads.py
